Add injury sync, backtest tooling, and UI model controls

--- a/ui/index.html
+++ b/ui/index.html
@@ -107,6 +107,18 @@
                 <input id="useEmaInput" type="checkbox" checked />
                 <span>Use EMA weighting</span>
               </label>
+              <label class="settings-toggle">
+                <input id="useMinutesModelInput" type="checkbox" checked />
+                <span>Use minutes model</span>
+              </label>
+              <label class="settings-toggle">
+                <input id="usePaceModelInput" type="checkbox" checked />
+                <span>Use pace model</span>
+              </label>
+              <label class="settings-toggle">
+                <input id="useHomeAdvantageInput" type="checkbox" checked />
+                <span>Use home/away adjustment</span>
+              </label>
               <label class="settings-field">
                 <span>EMA span</span>
                 <input id="emaSpanInput" type="number" min="2" step="1" value="12" />
